--- a/Video-Call-Client/App.xaml
+++ b/Video-Call-Client/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Video_Call_Client"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Client.xaml">
     <Application.Resources>
          
     </Application.Resources>
