--- a/Video-Call-Client/Client.xaml
+++ b/Video-Call-Client/Client.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="Client" Height="450" Width="800">
     <Grid>
-        <TextBlock x:Name="XAML_Text"/>
+        <Image x:Name="XAML_Image" Stretch="Fill"/>
     </Grid>
 </Window>
