--- a/Video-Call-Server/App.xaml
+++ b/Video-Call-Server/App.xaml
@@ -1,9 +1,11 @@
-﻿<Application x:Class="Video_Call_Server.App"
+﻿<Application
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Video_Call_Server"
-             StartupUri="MainWindow.xaml">
+             xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Video_Call_Server.App"
+             xmlns:converter="clr-namespace:Video_Call_Server.Converter"
+             StartupUri="Server.xaml">
     <Application.Resources>
-         
+        <converter:IsPenConverter x:Key="IsPenConverter"/>
     </Application.Resources>
 </Application>
